Drop support for Java 8 and Cassandra < 4 (#494)
Closes #493